deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maintenance
  labels:
    app: maintenance
